--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-ejs",
   "main": "server.js",
   "dependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.8.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "body-parser": "^1.15.0",
     "bson": "^0.4.23",
@@ -26,7 +26,6 @@
 
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-preset-es2015": "^6.6.0"
